--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "ejs": "^1.0.0",
-    "express": "^4.10.0"
+    "express": "^4.10.0",
+    "sequelize": "^2.0.0-rc2"
   }
 }
