chore(*): user login and register finished

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "gulp-uncss": "^0.5.1",
     "karma": "^0.12.24",
     "karma-chrome-launcher": "^0.1.5",
-    "karma-jasmine": "^0.1.5"
+    "karma-jasmine": "^0.1.5",
+    "karma-phantomjs-launcher": "^0.1.4"
   },
   "browserify": {
     "transform": [
