--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.0",
+    "angular": "master",
     "modernizr": "~2.8.3",
     "angular-animate": "~1.3.0",
     "ui-router": "~0.2.11",
