--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,10 @@
     "ng-foundation": "~0.0.21",
     "angular-sanitize": "~1.3.0",
     "angular-resource": "~1.3.0",
-    "fontawesome": "~4.2.0"
+    "fontawesome": "~4.2.0",
+    "codemirror": "~4.7.0",
+    "ng-codemirror": "master",
+    "angular-ui-utils": "~0.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0"
