--- a/bower.json
+++ b/bower.json
@@ -28,7 +28,8 @@
     "fontawesome": "~4.2.0",
     "codemirror": "~4.7.0",
     "ng-codemirror": "master",
-    "angular-ui-utils": "~0.1.1"
+    "angular-ui-utils": "~0.1.1",
+    "slimScroll": "~1.3.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0"
