--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "codemirror": "~4.7.0",
     "ng-codemirror": "master",
     "angular-ui-utils": "~0.1.1",
-    "slimScroll": "~1.3.3"
+    "slimScroll": "~1.3.3",
+    "ng-moment": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0"
